force-app/main/default/objects/Customer_Master_Change_Request__c/Customer_Master_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Customer Master Change Request</label>
    <nameField>
        <displayFormat>CMCR-{0000}</displayFormat>
        <label>CMCR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Master Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>