force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Address_Contact_Usage__c.field-meta.xml
<CustomField>
    <fullName>Address_Contact_Usage__c</fullName>
    <label>Address/Contact Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>