force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_City__c.field-meta.xml
<CustomField>
    <fullName>Current_City__c</fullName>
    <label>Current City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>