force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Contact_Name__c</fullName>
    <label>Current Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>