force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_Country__c.field-meta.xml
<CustomField>
    <fullName>Current_Country__c</fullName>
    <label>Current Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>