force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Email__c</fullName>
    <label>Current Email</label>
    <type>Email</type>
</CustomField>