force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_Fax__c.field-meta.xml
<CustomField>
    <fullName>Current_Fax__c</fullName>
    <label>Current Fax</label>
    <type>Phone</type>
</CustomField>