force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone__c</fullName>
    <label>Current Phone</label>
    <type>Phone</type>
</CustomField>