force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Province__c</fullName>
    <label>Current State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>