force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Current_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Zip_Postal_Code__c</fullName>
    <label>Current Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>