force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <formula>Account_Name__r.QWBS_Cust_ID__c</formula>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>