force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Customer_Setup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Setup_Notes__c</fullName>
    <label>Customer Setup Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>