force-app/main/default/objects/Customer_Master_Change_Request__c/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <label>New Address</label>
    <type>TextArea</type>
</CustomField>