force-app/main/default/objects/Customer_Master_Change_Request__c/fields/New_City__c.field-meta.xml
<CustomField>
    <fullName>New_City__c</fullName>
    <label>New City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>