force-app/main/default/objects/Customer_Master_Change_Request__c/fields/New_Country__c.field-meta.xml
<CustomField>
    <fullName>New_Country__c</fullName>
    <label>New Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>