force-app/main/default/objects/Customer_Master_Change_Request__c/fields/New_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Email__c</fullName>
    <label>New Email</label>
    <type>Email</type>
</CustomField>