force-app/main/default/objects/Customer_Master_Change_Request__c/fields/New_Fax__c.field-meta.xml
<CustomField>
    <fullName>New_Fax__c</fullName>
    <label>New Fax</label>
    <type>Phone</type>
</CustomField>