force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IF(Urgent__c = true, &quot;Urgent&quot;, &quot;Normal&quot;)</formula>
    <label>Priority</label>
    <type>Text</type>
</CustomField>