force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Address</fullName>
            </value>
            <value>
                <fullName>Add Address</fullName>
            </value>
            <value>
                <fullName>Change Contact</fullName>
            </value>
            <value>
                <fullName>Add Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>