force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Master Change Requests</relationshipLabel>
    <relationshipName>Customer_Master_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>