force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Requester_Notes__c.field-meta.xml
<CustomField>
    <fullName>Requester_Notes__c</fullName>
    <label>Requester Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>