force-app/main/default/objects/Customer_Master_Change_Request__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent</label>
    <type>Checkbox</type>
</CustomField>