force-app/main/default/objects/Customer_Master_Change_Request__c/recordTypes/Closed_Customer_Master_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Closed_Customer_Master_Change_Request</fullName>
    <active>true</active>
    <label>Closed Customer Master Change Request</label>
</RecordType>