force-app/main/default/objects/Customer_Master_Change_Request__c/recordTypes/Open_Customer_Master_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Open_Customer_Master_Change_Request</fullName>
    <active>true</active>
    <label>Open Customer Master Change Request</label>
</RecordType>