force-app/main/default/objects/Customer_Master_Change_Request__c/listViews/Open_CMCR.listView-meta.xml
<ListView>
    <fullName>Open_CMCR</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Address_Contact_Usage__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Open Customer Master Change Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>